new check connection for producer;

--- a/nrpe.d/commands.cfg
+++ b/nrpe.d/commands.cfg
@@ -19,3 +19,7 @@ command[rab_queues_count]=/etc/nagios/nrpe.d/plugins/check_rabbitmq -a queues_co
 command[check_consumer]=/etc/nagios/nrpe.d/plugins/check_procs -c 1: -C consumer.py
 command[check_mongodb]=/etc/nagios/nrpe.d/plugins/check_mongo
 command[check_jenkins]=/etc/nagios/nrpe.d/plugins/check_procs -c 2: -u jenkins
+command[check_producer]=/etc/nagios/nrpe.d/plugins/check_procs -c 1: -C producer.py
+command[check_producer2]=/etc/nagios/nrpe.d/plugins/check_procs -c 1: -C producer2.py
+command[check_producer3]=/etc/nagios/nrpe.d/plugins/check_procs -c 1: -C producer3.py
+command[check_conn]=/etc/nagios/nrpe.d/plugins/check_connections -s established '( sport = :8989 )' -w 800 -c 1000
