new check connection for producer;

--- a/nrpe.d/commands.cfg
+++ b/nrpe.d/commands.cfg
@@ -22,4 +22,6 @@ command[check_jenkins]=/etc/nagios/nrpe.d/plugins/check_procs -c 2: -u jenkins
 command[check_producer]=/etc/nagios/nrpe.d/plugins/check_procs -c 1: -C producer.py
 command[check_producer2]=/etc/nagios/nrpe.d/plugins/check_procs -c 1: -C producer2.py
 command[check_producer3]=/etc/nagios/nrpe.d/plugins/check_procs -c 1: -C producer3.py
-command[check_conn]=/etc/nagios/nrpe.d/plugins/check_connections -s established '( sport = :8989 )' -w 800 -c 1000
+command[check_conn_8989]=/etc/nagios/nrpe.d/plugins/check_connection -p tcp -s established -f '( sport = :8989 )' -w 800 -c 1000
+command[check_conn_8988]=/etc/nagios/nrpe.d/plugins/check_connection -p tcp -s established -f '( sport = :8988 )' -w 800 -c 1000
+command[check_conn_8987]=/etc/nagios/nrpe.d/plugins/check_connection -p tcp -s established -f '( sport = :8987 )' -w 800 -c 1000
