--- a/nrpe.d/commands.cfg
+++ b/nrpe.d/commands.cfg
@@ -16,7 +16,7 @@ command[check_mem]=/etc/nagios/nrpe.d/plugins/check_mem -w 20 -c 10
 command[rab_aliveness]=/etc/nagios/nrpe.d/plugins/check_rabbitmq $ARG1$
 command[rab_connection_count]=/etc/nagios/nrpe.d/plugins/check_rabbitmq -a connection_count -C 5 -W 2
 command[rab_queues_count]=/etc/nagios/nrpe.d/plugins/check_rabbitmq -a queues_count -C 10000 -W 500 -H dev
-command[check_consumer]=/etc/nagios/nrpe.d/plugins/check_procs -c 1: -C consumerReport.py
+command[check_consumer]=/etc/nagios/nrpe.d/plugins/check_procs -c 1: -C consumerReport.
 command[check_mongodb]=/etc/nagios/nrpe.d/plugins/check_mongo
 command[check_jenkins]=/etc/nagios/nrpe.d/plugins/check_procs -c 2: -u jenkins
 command[check_producer]=/etc/nagios/nrpe.d/plugins/check_procs -c 1: -C producer.py
