--- a/nrpe.d/commands.cfg
+++ b/nrpe.d/commands.cfg
@@ -6,6 +6,9 @@
 #
 #############################################################################
 
+#########
+# System
+#########
 
 command[check_users]=/etc/nagios/nrpe.d/plugins/check_users -w 5 -c 10
 command[check_load]=/etc/nagios/nrpe.d/plugins/check_load -w 15,10,5 -c 30,25,20
@@ -13,15 +16,39 @@ command[check_disk]=/etc/nagios/nrpe.d/plugins/check_disk -w 20% -c 10% -p /dev/
 command[check_zombie_procs]=/etc/nagios/nrpe.d/plugins/check_procs -w 5 -c 10 -s Z
 command[check_total_procs]=/etc/nagios/nrpe.d/plugins/check_procs -w 150 -c 200
 command[check_mem]=/etc/nagios/nrpe.d/plugins/check_mem -w 20 -c 10
+
+
+###########
+# Services
+###########
+
 command[rab_aliveness]=/etc/nagios/nrpe.d/plugins/check_rabbitmq $ARG1$
 command[rab_connection_count]=/etc/nagios/nrpe.d/plugins/check_rabbitmq -a connection_count -C 5 -W 2
 command[rab_queues_count]=/etc/nagios/nrpe.d/plugins/check_rabbitmq -a queues_count -C 10000 -W 500 -H dev
-command[check_consumer]=/etc/nagios/nrpe.d/plugins/check_procs -c 1: -C consumerReport.py
 command[check_mongodb]=/etc/nagios/nrpe.d/plugins/check_mongo
 command[check_jenkins]=/etc/nagios/nrpe.d/plugins/check_procs -c 2: -u jenkins
+
+
+############
+# Producers
+############
+
 command[check_producer]=/etc/nagios/nrpe.d/plugins/check_procs -c 1: -C producer.py
 command[check_producer2]=/etc/nagios/nrpe.d/plugins/check_procs -c 1: -C producer2.py
 command[check_producer3]=/etc/nagios/nrpe.d/plugins/check_procs -c 1: -C producer3.py
 command[check_conn_8989]=/etc/nagios/nrpe.d/plugins/check_connection -p tcp -s established -f '( sport = :8989 )' -w 800 -c 1000
 command[check_conn_8988]=/etc/nagios/nrpe.d/plugins/check_connection -p tcp -s established -f '( sport = :8988 )' -w 800 -c 1000
 command[check_conn_8987]=/etc/nagios/nrpe.d/plugins/check_connection -p tcp -s established -f '( sport = :8987 )' -w 800 -c 1000
+
+
+#############
+# Consumers
+#############
+
+command[check_administration_consumer]=/etc/nagios/nrpe.d/plugins/check_procs -c 1: -C administration-consumer.service
+command[check_alert_consumer]=/etc/nagios/nrpe.d/plugins/check_procs -c 1: -C alert-consumer.service
+command[check_email_consumer]=/etc/nagios/nrpe.d/plugins/check_procs -c 1: -C email-consumer.service
+command[check_exdevice_consumer]=/etc/nagios/nrpe.d/plugins/check_procs -c 1: -C exdevice-consumer.service
+command[check_notreg_consumer]=/etc/nagios/nrpe.d/plugins/check_procs -c 1: -C notreg-consumer.service
+command[check_report_consumer]=/etc/nagios/nrpe.d/plugins/check_procs -c 1: -C report-consumer.service
+command[check_telegram_consumer]=/etc/nagios/nrpe.d/plugins/check_procs -c 1: -C telegram-consumer.service
